app/styles/global.css
:root {
  --tw-ring-color: #eaf2ff;
}

html {
  @apply font-inter;
  /** this is neede because tailwind adds just the property for webkit and tailwind adds just the webkit version*/
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
}

body {
  @apply bg-white text-text-sm text-gray-900;
}

h1,
h2,
h3,
h4,
h5 {
  @apply font-semibold text-gray-900;
}

h1 {
  @apply text-display-sm font-semibold;
}
h2 {
  @apply text-display-xs;
}
h3 {
  @apply text-text-xl;
}
h4 {
  @apply text-text-lg;
}
h5 {
  @apply text-text-md;
}
h5 {
  @apply text-text-sm;
}

label span {
  @apply capitalize;
}

p {
  @apply font-normal;
}

@keyframes spinner {
  to {
    transform: rotate(360deg);
  }
}

.spinner:before {
  content: "";
  box-sizing: border-box;
  position: absolute;
  top: 50%;
  left: 50%;
  width: 20px;
  height: 20px;
  margin-top: -10px;
  margin-left: -10px;
  border-radius: 50%;
  border: 2px solid #ccc;
  /* border-top-color: #000; */
  @apply border-t-primary-500;
  animation: spinner 0.6s linear infinite;
}

.markdown-viewer ul {
  @apply list-inside list-disc;
}

.markdown-viewer ol {
  @apply list-inside list-decimal;
}

.markdown-viewer a {
  text-decoration: underline;
}
.markdown-viewer a:hover {
  @apply text-primary;
}

.markdown-viewer blockquote {
  @apply border-l-4 border-primary-500 pl-4;
}

.markdown-viewer h1,
.markdown-viewer h2,
.markdown-viewer h3,
.markdown-viewer h4,
.markdown-viewer h5,
.markdown-viewer h6 {
  @apply mb-1;
}

.markdown-viewer p:not(:last-child) {
  @apply mb-4;
}

.maplibregl-ctrl-bottom-right {
  display: none;
}

.markdown-viewer table {
  @apply w-full border-collapse rounded-lg text-xs;
}
.markdown-viewer table td,
.markdown-viewer table th {
  @apply border border-gray-200 px-6 py-3 text-gray-600;
}

.markdown-viewer table th {
  @apply bg-gray-50 font-medium text-gray-600;
}

.markdown-viewer table th {
  @apply font-normal;
}

.dialog-backdrop {
  @apply fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-50;
}
dialog {
  @apply fixed m-0 h-full w-full bg-transparent p-0 md:relative   md:m-auto md:h-auto md:w-[600px]  md:py-8;
}

.dialog > .scrollable-content::-webkit-scrollbar {
  @apply w-1;
}

.dialog > .scrollable-content::-webkit-scrollbar-thumb {
  @apply rounded-br-lg rounded-tr-lg bg-[#a0a0a0];
}

.dialog > .scrollable-content::-webkit-scrollbar-track {
  @apply rounded-br-lg rounded-tr-lg bg-[#e2e2e2];
}

.responsive-filters .form-wrapper {
  @apply flex-col items-start xl:flex-row xl:items-center;
}

@media (max-width: 767px) {
  .word-break {
    word-break: break-word;
  }
}

